# voice-annotation-tool

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  resources.qrc  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  python-app.yml
docs/: api.rst  conf.py  generate_annotations.rst  import_export.rst  index.rst  interface.rst  recording.rst  shortcuts.rst  tsv_format.rst  usage.rst
docs/source/: conf.py  index.rst
src/annotation_tool/: about_dialog.py  application.py  create_project_dialog.py  main.py  main_window.py  opened_project_frame.py  project.py
src/test/: test_about_dialog.py  test_application.py  test_audio_playback_widget.py  test_create_project_dialog.py  test_main_window.py  test_new_project_dialog.py  test_opened_project.py  test_project.py
src/ui/: about.ui  create_project_dialog.ui  loading_dialog.ui  main.ui  opened_project_frame.ui  shortcut_settings_dialog.ui
src/voice_annotation_tool/: __main__.py  about_dialog.py  annotation.py  annotation_list_model.py  application.py  audio_playback_widget.py  choose_project_frame.py  create_project_dialog.py  main.py  main_window.py  multi_selection.py  opened_project_frame.py  project.py  project_settings_dialog.py  shortcut_settings_dialog.py  shortcut_widget.py
test/: conftest.py  test_about_dialog.py  test_application.py  test_audio_playback_widget.py  test_create_project_dialog.py  test_main_window.py  test_new_project_dialog.py  test_opened_project.py  test_project.py  test_project_settings_dialog.py
translations/: de.ts
ui/: about.ui  audio_playback_widget.ui  choose_project_frame.ui  main.ui  opened_project_frame.ui  project_settings_dialog.ui  shortcut_widget.ui
