[metadata]
name = voice-annotation-tool
version = 1.9.0
author = Feliks Weber
author_email = feliks.weber@tu-dresden.de
description = Utility to annotate short voice samples
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tud-zih-energy/voice-annotation-tool
project_urls =
    Bug Tracker = https://github.com/tud-zih-energy/voice-annotation-tool/issues
    Documentation = https://voice-annotation-tool.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio :: Speech 
    Natural Language :: English
    Natural Language :: German
    Typing :: Typed
    Intended Audience :: Science/Research


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
	PySide6 >=6.2.2.1
	shiboken6 >=6.2.2.1	

[options.entry_points]
console_scripts = 
        voice-annotation-tool = voice_annotation_tool.main:main

[options.packages.find]
where = src
